Minor settings changes.

--- a/blog.qmd
+++ b/blog.qmd
@@ -1,8 +1,11 @@
 ---
+code-tools: false
 page-layout: full
 listing:
   contents: blog
-  categories: true
+  type: default
+  categories: cloud
+  sort: "date desc"
 ---
 
 
