--- a/resume.qmd
+++ b/resume.qmd
@@ -12,7 +12,7 @@ number-sections: false
 **The University of Chicago** (2024-2025) <br>
 MS in Data Science (GPA: 3.90)
 
-Relevant Coursework: Foundations of Machine Learning and AI I-II, High Dimensioanl Time Series Analysis, Machine Learning on Graphs, Groups, and Manifolds, Data Systems and Design.
+Relevant Coursework: Foundations of Machine Learning and AI I-II, High Dimensional Time Series Analysis, Machine Learning on Graphs, Groups, and Manifolds, Data Systems and Design.
 
 **The University of Chicago** (2020-2024) <br>
 BA in Mathematics, with honors (GPA: 3.78)
