--- a/resume.qmd
+++ b/resume.qmd
@@ -17,7 +17,7 @@ Relevant Coursework: Foundations of Machine Learning and AI I-II, High Dimension
 **The University of Chicago** (2020-2024) <br>
 BA in Mathematics, with honors (GPA: 3.78)
 
-Relevant Coursework: Graduate Abstract Algebra I-II-III, Honors Analysis in Rn I-II-III, Optimization, Dynamical Systems, Differentiable Manifolds and Integration on Manifolds, Algebraic Topology, Algebraic Geometry, Complex Analysis, Mathematical Probability, Topics in Analysis, Point-Set Topology, Quantum Mechanics I-II.
+Relevant Coursework: Graduate Abstract Algebra I-II-III, Honors Analysis in Rn I-II-III, Optimization, Dynamical Systems, Differentiable Manifolds and Integration on Manifolds, Algebraic Topology, Algebraic Geometry, Complex Analysis, Mathematical Probability, Topics in Analysis (Geometric Measure Theory), Point-Set Topology, Quantum Mechanics I-II.
 
 ## Technical Skills
 
