--- a/blog/plat.qmd
+++ b/blog/plat.qmd
@@ -7,6 +7,9 @@ execute:
   warning: true
   error: true 
   cache: true 
+categories: 
+  - Math
+  - Analysis
 ---
 
 ![](../mysite-assets/plat.pdf){width=100% height=500}
