--- a/blog/poincare.qmd
+++ b/blog/poincare.qmd
@@ -7,5 +7,9 @@ execute:
   warning: true
   error: true 
   cache: true 
+categories: 
+  - Math
+  - Dynamics
+  - Analysis
 ---
 ![](../mysite-assets/apprenticePaper.pdf){width=100% height=500}
