--- a/blog/plat.qmd
+++ b/blog/plat.qmd
@@ -12,5 +12,7 @@ categories:
   - Analysis
 ---
 
+Expository paper on Plateau's Problem and varifolds. 
+
 ![](../mysite-assets/plat.pdf){width=100% height=500}
 
