--- a/blog.qmd
+++ b/blog.qmd
@@ -3,8 +3,11 @@ code-tools: false
 page-layout: full
 listing:
   contents: blog
-  type: default
+  type: table
   categories: cloud
+  sort: false
+  table-hover: true
+  fields: [title, date]
 ---
 
 
